# selva-office

./: .enclii.yml  .env.example  .eslintrc.json  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.md  LICENSE  Makefile  PRD.md  README.md  REBRAND_AUTOSWARM_TO_SELVA.md  REBRAND_CUTOVER_RUNBOOK.md  ROADMAP.md  SECURITY.md  autoswarm_state.db  enclii.yaml  llms-full.txt  llms.txt  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/: dependabot.yml
apps/nexus-api/: pyproject.toml
apps/nexus-api/alembic/: env.py
apps/nexus-api/alembic/versions/: 0000_initial_schema.py  0001_add_agent_skill_ids.py  0002_add_org_id.py  0003_enhance_ledger.py  0004_add_task_queue_tracking.py  0004_wave2_tables.py  0005_add_workflows_table.py  0006_add_artifacts_table.py  0007_add_skill_marketplace.py  0008_add_maps_table.py  0009_add_calendar_connections.py  0010_add_chat_messages.py  0011_add_task_events_table.py  0012_add_approval_responded_by.py  0013_add_agent_performance_tracking.py  0014_wave2_tables.py  0015_add_tenant_configs.py  0016_add_tenant_sso_branding.py  0017_add_audit_logs.py  0018_add_voice_mode_and_consent_ledger.py  0019_add_secret_audit_log.py  0020_add_github_admin_audit_log.py  0021_add_configmap_audit_log.py  0022_add_webhook_audit_log.py  0023_add_hitl_confidence_tables.py  0024_add_tenant_identities.py
apps/nexus-api/nexus_api/: acp_server.py  analytics.py  approval_notifier.py  attribution.py  auth.py  billing_client.py  celery_app.py  checkpoints.py  config.py  database.py  logging_config.py  main.py  models.py  service_tracking.py  ws.py
apps/nexus-api/nexus_api/audit/: __init__.py  configmap_audit.py  github_admin_audit.py  secret_audit.py  webhook_audit.py
apps/nexus-api/nexus_api/memory_store/: db.py
apps/nexus-api/nexus_api/middleware/: audit.py  csrf.py  rate_limit.py  request_id.py  security.py
apps/nexus-api/nexus_api/models/: approval_request.py  schedule.py
apps/nexus-api/nexus_api/routers/: acp.py  admin.py  agents.py  analytics.py  approvals.py  artifacts.py  audit.py  audit_unified.py  billing.py  billing_internal.py  calendar.py  chat.py  checkpoints.py  command_approvals.py  crm_webhooks.py  departments.py  events.py  gateway.py  health.py  hitl_confidence.py  inference_proxy.py  intelligence.py  invoices.py  maps.py  marketplace.py  metrics.py  onboarding.py  playbooks.py  probe.py  schedules.py  skills.py  skills_hub.py  swarms.py  tenant_identities.py  tenants.py  trajectories.py  voice.py  workflows.py
apps/nexus-api/nexus_api/tasks/: acp_tasks.py  memory_tasks.py  skill_tasks.py
apps/nexus-api/tests/: conftest.py  test_admin_api.py  test_agent_stats.py  test_approval_audit.py  test_artifacts.py  test_attribution.py  test_audit.py  test_audit_unified.py  test_billing_integration.py  test_billing_internal.py  test_calendar_api.py  test_chat_api.py  test_config_validation.py  test_crm_webhooks.py  test_departments.py  test_dispatch_audience_gate.py  test_dispatch_rate_limit.py  test_dlq_stats.py  test_enclii_webhook.py  test_events_router.py  test_gateway.py  test_guest_restrictions.py  test_hitl_confidence_router.py  test_intelligence_router.py  test_maps_api.py  test_marketplace.py  test_metrics.py  test_openapi.py  test_performance_dispatch.py  test_playbooks.py  test_probe_router.py  test_request_id_middleware.py  test_rls_isolation.py  test_routers.py  test_security.py  test_security_headers.py  test_stale_task_reaper.py  test_swarm_task_lifecycle.py  test_task_board.py  test_tenant.py  (+5 more)
apps/workers/: pyproject.toml
apps/workers/autoswarm_workers/: __main__.py  attribution.py  checkpointer.py  config.py  event_emitter.py  http_retry.py  inference.py  interrupt_handler.py  learning.py  prompts.py  task_status.py
apps/workers/autoswarm_workers/graphs/: base.py  billing.py  coding.py  crm.py  deployment.py  intelligence.py  meeting.py  operations.py  project.py  puppeteer.py  research.py  sales.py
apps/workers/autoswarm_workers/tools/: bash_tool.py  git_tool.py
apps/workers/selva_workers/: __main__.py  attribution.py  auth.py  config.py  event_emitter.py  health.py  inference.py  interrupt_handler.py  learning.py  metering.py  prompts.py  task_status.py
apps/workers/selva_workers/graphs/: accounting.py  base.py  billing.py  coding.py  crm.py  deployment.py  intelligence.py  meeting.py  operations.py  project.py  puppeteer.py  research.py  sales.py
apps/workers/selva_workers/search/: __init__.py  types.py  web.py
apps/workers/selva_workers/tools/: bash_tool.py  git_tool.py
apps/workers/tests/: test_accounting_graph.py  test_audience_integration.py  test_bandit_reward.py  test_bash_safety.py  test_bash_sandbox.py  test_billing_graph.py  test_checkpointer.py  test_coding_worktree.py  test_crm_attribution.py  test_crm_graph.py  test_deployment_graph.py  test_e2e_pipeline.py  test_event_emitter.py  test_experience_injection.py  test_git_credential_isolation.py  test_git_credentials.py  test_git_tool.py  test_http_retry.py  test_implement_retries.py  test_implement_writes.py  test_inference_wiring.py  test_intelligence_graph.py  test_learning.py  test_llm_event_payload.py  test_meeting_graph.py  test_metering.py  test_permission_wiring.py  test_polling_jitter.py  test_pr_creation.py  test_prompts.py  test_puppeteer_graph.py  test_repo_validation.py  test_research_search.py  test_sales_graph.py  test_task_status.py  test_test_node_async.py  test_worker_auth.py  test_worker_concurrency.py  test_worker_config.py  test_worker_startup.py
data/: org-config-template.yaml
docs/: ARCHITECTURE.md  AUTONOMOUS_CLEANROOM_PROTOCOL.md  BENCHMARK.md  COLYSEUS_SCALING.md  CONTEXT_FILES.md  DEVELOPMENT.md  DISASTER_RECOVERY.md  HERMES_OPERATIONS.md  HITL_FLOW.md  INFERENCE_PROVIDERS.md  INTEGRATION.md  KEDA_QUEUE_SCALING.md  MIGRATION_LEGACY_QUEUE.md  NODE_ARCHITECTURE.md  PLUGIN_DEVELOPMENT.md  PP_4_STAGING_AUDIT.md  ROADMAP_3D_VOXEL.md  RUNBOOK.md  SELVA_SWE_PARITY.md  SELVA_TOOL_COVERAGE_PLAN.md  SWARM_MANIFESTO.md  (+1 more)
scripts/: backup-postgres.sh  (+18 more)
(+375 files in other folders)
