[project]
name = "autoswarm-office"
version = "0.1.0"
description = "AutoSwarm Office — Gamified multi-agent business orchestration platform"
requires-python = ">=3.12"
dependencies = [
  "autoswarm-orchestrator",
  "autoswarm-inference",
  "autoswarm-permissions",
  "autoswarm-nexus-api",
  "autoswarm-workers",
  "autoswarm-skills",
  "autoswarm-observability",
  "autoswarm-redis-pool",
  "autoswarm-workflows",
  "autoswarm-tools",
  "autoswarm-memory",
  "autoswarm-sdk",
]

[tool.uv.workspace]
members = [
  "apps/nexus-api",
  "apps/workers",
  "packages/inference",
  "packages/orchestrator",
  "packages/permissions",
  "packages/skills",
  "packages/observability",
  "packages/redis-pool",
  "packages/workflows",
  "packages/tools",
  "packages/memory",
  "packages/sdk",
]

[tool.uv.sources]
autoswarm-orchestrator = { workspace = true }
autoswarm-inference = { workspace = true }
autoswarm-permissions = { workspace = true }
autoswarm-nexus-api = { workspace = true }
autoswarm-workers = { workspace = true }
autoswarm-skills = { workspace = true }
autoswarm-observability = { workspace = true }
autoswarm-redis-pool = { workspace = true }
autoswarm-workflows = { workspace = true }
autoswarm-tools = { workspace = true }
autoswarm-memory = { workspace = true }
autoswarm-sdk = { workspace = true }

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.6",
  "mypy>=1.14.1",
  "aiosqlite>=0.22.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["packages/skills/community-skills"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["autoswarm_orchestrator", "autoswarm_inference", "autoswarm_permissions", "nexus_api", "autoswarm_workers", "autoswarm_skills", "autoswarm_observability", "autoswarm_redis_pool", "autoswarm_workflows", "autoswarm_tools", "autoswarm_memory", "autoswarm_sdk"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
