[project]
name = "selva"
version = "0.1.0"
description = "Selva — Gamified multi-agent business orchestration platform"
requires-python = ">=3.12"
dependencies = [
  "selva-orchestrator",
  "madfam-inference",
  "selva-permissions",
  "selva-nexus-api",
  "selva-workers",
  "selva-skills",
  "selva-observability",
  "selva-redis-pool",
  "selva-workflows",
  "selva-tools",
  "selva-memory",
  "selva-sdk",
  "selva-calendar",
  "selva-a2a",
]

[tool.uv.workspace]
members = [
  "apps/nexus-api",
  "apps/workers",
  "packages/inference",
  "packages/orchestrator",
  "packages/permissions",
  "packages/skills",
  "packages/observability",
  "packages/redis-pool",
  "packages/workflows",
  "packages/tools",
  "packages/memory",
  "packages/sdk",
  "packages/calendar",
  "packages/a2a",
]

[tool.uv.sources]
selva-orchestrator = { workspace = true }
madfam-inference = { workspace = true }
selva-permissions = { workspace = true }
selva-nexus-api = { workspace = true }
selva-workers = { workspace = true }
selva-skills = { workspace = true }
selva-observability = { workspace = true }
selva-redis-pool = { workspace = true }
selva-workflows = { workspace = true }
selva-tools = { workspace = true }
selva-memory = { workspace = true }
selva-sdk = { workspace = true }
selva-calendar = { workspace = true }
selva-a2a = { workspace = true }

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.6",
  "mypy>=1.14.1",
  "aiosqlite>=0.22.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["packages/skills/community-skills"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"**/routers/*.py" = ["B008"]
"**/auth.py" = ["B008"]
"**/tests/*.py" = ["SIM117"]

[tool.ruff.lint.isort]
known-first-party = ["selva_orchestrator", "madfam_inference", "selva_permissions", "nexus_api", "selva_workers", "selva_skills", "selva_observability", "selva_redis_pool", "selva_workflows", "selva_tools", "selva_memory", "selva_sdk", "selva_calendar", "selva_a2a"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
explicit_package_bases = true
mypy_path = [
    "packages/inference",
    "packages/orchestrator",
    "packages/permissions",
    "packages/skills",
    "packages/observability/src",
    "packages/redis-pool/src",
    "packages/workflows/src",
    "packages/tools/src",
    "packages/memory/src",
    "packages/sdk",
    "packages/calendar",
    "packages/a2a",
    "apps/nexus-api",
    "apps/workers",
]
exclude = [
    "community-skills",
    "node_modules",
    "dist",
    "\\.venv",
    "conftest\\.py",
    "tests/",
]

[[tool.mypy.overrides]]
module = ["tests.*", "conftest"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "posthog.*",
    "opentelemetry.*",
    "faiss.*",
    "jose.*",
    "yaml.*",
    "cachetools.*",
    "langgraph.*",
    "langchain_core.*",
    "simple_salesforce.*",
    "sentry_sdk.*",
    "prometheus_client.*",
    "httpx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = [
  "packages/",
  "apps/nexus-api/nexus_api",
  "apps/workers/selva_workers",
]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "packages/skills/community-skills/*",
]

[tool.coverage.report]
fail_under = 55
show_missing = true
skip_empty = true
