[project]
name = "selva-nexus-api"
version = "0.1.0"
description = "Selva core orchestration API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "redis>=5.2.1",
  "pydantic>=2.10.5",
  "pydantic-settings>=2.7.1",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.28.1",
  "alembic>=1.14.0",
  "websockets>=14.1",
  "selva-orchestrator",
  "selva-permissions",
  "madfam-inference",
  "selva-skills",
  "selva-workflows",
  "selva-observability",
  "selva-redis-pool",
  "selva-calendar",
  "selva-a2a",
  "structlog>=24.0",
  "sentry-sdk[fastapi]>=2.19.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "celery>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus_api"]
