[project]
name = "selva-workers"
version = "0.1.0"
description = "LangGraph execution workers for Selva"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2.60",
  "langgraph-checkpoint-postgres>=2.0",
  "langchain-core>=0.3.28",
  "psycopg[binary]>=3.1",
  "redis>=5.2.1",
  "httpx>=0.28.1",
  "pydantic>=2.10.5",
  "pydantic-settings>=2.7.1",
  "madfam-inference",
  "selva-permissions",
  "selva-skills",
  "selva-workflows",
  "selva-observability",
  "selva-redis-pool",
  "sentry-sdk>=2.19.0",
  "prometheus-client>=0.21.0",
  "aiohttp>=3.11.0",
  "cachetools>=5.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["selva_workers"]
